refactor [java]: Replace get(0) with getFirst()
GitOrigin-RevId: 80a65ed64b4fc18c7337775ed352efc14e7ca934